Stacked vertical chart created for dominance ratio
